--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -143,7 +143,7 @@
               element == expandedElement ? 'expanded' : 'collapsed'
             "
           >
-            <div class="flex flex-col px-2 pb-4">
+            <div class="flex flex-col px-2 pb-4 text-lg">
               <div>
                 Para: {{ element.recipient.fullname | titlecase }} ({{
                   element.recipient.jobtitle
