--- a/src/app/presentation/components/procedures/workflow-graph/workflow-graph.component.html
+++ b/src/app/presentation/components/procedures/workflow-graph/workflow-graph.component.html
@@ -1,4 +1,4 @@
-@if (workflow().length>0) {
+<!-- @if (workflow().length>0) {
 <div class="areachart-wrapper dark">
   <ngx-graph
     class="chart-container"
@@ -59,12 +59,12 @@
                   {{ node.data.jobtitle ? node.data.jobtitle : "Sin cargo" }}
                 </mat-card-subtitle>
               </mat-card-header>
-              <!-- <mat-card-content>
+              <mat-card-content>
                 <button #mybtn (click)="ope(mybtn)" class="s">sii</button>
                 <p style="font-size: 12px">
                   <strong>Dependencia: </strong>{{ node.data.dependencia }}
                 </p>
-              </mat-card-content> -->
+              </mat-card-content>
             </mat-card>
           </xhtml:div>
         </svg:foreignObject>
@@ -96,4 +96,4 @@
     </ng-template>
   </ngx-graph>
 </div>
-}
+} -->
