correcion esquema de contratacion

--- a/src/app/communications/presentation/pages/folders/folders.component.html
+++ b/src/app/communications/presentation/pages/folders/folders.component.html
@@ -13,7 +13,7 @@
 >
   @for (folder of folders(); track $index) {
   <div
-    class="relative group cursor-point p-4 flex flex-col items-center rounded-2xl box-folder"
+    class="relative group cursor-point p-4 flex flex-col items-center rounded-2xl box-folder h-[200px]"
     [routerLink]="[folder._id]"
   >
     <div class="w-20 mb-4">
