--- a/src/app/communications/presentation/pages/inbox/submission-dialog/submission-dialog.component.html
+++ b/src/app/communications/presentation/pages/inbox/submission-dialog/submission-dialog.component.html
@@ -169,6 +169,47 @@
     </mat-step>
 
     <mat-step label="Archivos adjuntos" optional>
+      <div class="flex justify-between items-center p-2">
+        <span>Archivos:</span>
+        <button
+          mat-mini-fab
+          aria-label="Attach file"
+          (click)="fileInput.click()"
+        >
+          <mat-icon>attach_file</mat-icon>
+        </button>
+        <input
+          #fileInput
+          [hidden]="true"
+          type="file"
+          [multiple]="true"
+          (change)="addFile($event)"
+          accept="*"
+        />
+      </div>
+      <div></div>
+      <div class="col-span-2">
+        <mat-list class="overflow-y-auto max-h-52 w-full rounded-lg border-2">
+          @for (file of files(); track $index) {
+          <mat-list-item>
+            <mat-icon matListItemIcon>description</mat-icon>
+            <div matListItemTitle>{{ file.name }}</div>
+            <div matListItemLine>
+              {{ (file.size / 1024 / 1024).toFixed(2) }} MB
+            </div>
+            <button
+              mat-icon-button
+              (click)="removeFile($index)"
+              matListItemMeta
+            >
+              <mat-icon>delete</mat-icon>
+            </button>
+          </mat-list-item>
+          } @empty {
+          <span class="px-3">Sin archivos adjuntos</span>
+          }
+        </mat-list>
+      </div>
       <div class="flex justify-end mt-2">
         <button mat-button matStepperPrevious>Atras</button>
       </div>
