--- a/src/app/communications/presentation/pages/inbox/communication-detail/communication-detail.component.html
+++ b/src/app/communications/presentation/pages/inbox/communication-detail/communication-detail.component.html
@@ -4,13 +4,13 @@
   </button>
   <span class="ml-4">Detalle</span>
   <span class="flex-1"></span>
-  <button
+  <!-- <button
     mat-icon-button
     class="example-icon favorite-icon"
     aria-label="Example icon-button with heart icon"
   >
     <mat-icon>favorite</mat-icon>
-  </button>
+  </button> -->
   <button
     mat-icon-button
     class="example-icon"
@@ -19,11 +19,11 @@
     <mat-icon>share</mat-icon>
   </button>
 </mat-toolbar>
-<div class="p-2">
+<div class="px-6 mb-4">
   @if (communication()) {
   <mat-card appearance="outlined">
     <mat-card-header>
-      <img mat-card-avatar src="assets/images/account.png" />
+      <img mat-card-avatar src="images/icons/account.png" />
       <mat-card-title>
         {{ communication()?.sender?.fullname | titlecase }}
       </mat-card-title>
@@ -54,6 +54,9 @@
       } 
       @case ("InternalProcedure") {
         <internal-communication [procedure]="internal" />
+      } 
+      @case ("ProcurementProcedure") {
+        <procurement-communication [procedure]="procedure()"/>
       } 
       @default {
         <p>Type Procedure is not define</p>
