--- a/src/app/communications/presentation/pages/inbox/inbox.component.html
+++ b/src/app/communications/presentation/pages/inbox/inbox.component.html
@@ -83,9 +83,7 @@
   </div>
 </ng-template>
 
-<div
-  class="flex flex-col sm:flex-row justify-between items-center p-2 gap-y-2"
->
+<div class="flex flex-col sm:flex-row justify-between items-center p-2 gap-y-2">
   <div>
     <mat-button-toggle-group [(ngModel)]="status" (change)="getData()">
       <mat-button-toggle value="all">Todo</mat-button-toggle>
@@ -132,7 +130,7 @@
     <ng-container matColumnDef="code">
       <th mat-header-cell *matHeaderCellDef>Alterno</th>
       <td mat-cell *matCellDef="let row">
-        <a [routerLink]="['../inbox', row._id]" class="text-blue-600">
+        <a [routerLink]="['../inbox', row.id]" class="text-blue-600">
           {{ row.procedure.code }}
         </a>
       </td>
@@ -179,6 +177,11 @@
           <button (click)="send(row)" mat-menu-item>
             <mat-icon>send</mat-icon>
             <span>Remitir</span>
+          </button>
+
+          <button mat-menu-item (click)="archive([row])">
+            <mat-icon>archive</mat-icon>
+            Archivar
           </button>
           <!-- <button mat-menu-item (click)="archive()">
               <mat-icon>domain_verification</mat-icon>
