--- a/src/app/communications/presentation/pages/inbox/inbox.component.html
+++ b/src/app/communications/presentation/pages/inbox/inbox.component.html
@@ -83,7 +83,7 @@
   </div>
 </ng-template>
 
-<div class="flex flex-col sm:flex-row justify-between items-center p-2 gap-y-2">
+<div class="flex flex-col sm:flex-row justify-between items-center py-2 sm:px-4 gap-y-2">
   <div>
     <mat-button-toggle-group [(ngModel)]="status" (change)="getData()">
       <mat-button-toggle value="all">Todo</mat-button-toggle>
@@ -100,7 +100,7 @@
   </div>
 </div>
 
-<div class="mat-elevation-z8 px-4">
+<div class="mat-elevation-z8 px-2">
   <table mat-table [dataSource]="datasource()">
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef>
