implementacion de nuevos esquema para contratacion

--- a/src/app/procedures/presentation/pages/procurements-manage/procurement-dialog/procurement-dialog.component.html
+++ b/src/app/procedures/presentation/pages/procurements-manage/procurement-dialog/procurement-dialog.component.html
@@ -1,17 +1,6 @@
 <h2 mat-dialog-title>{{ data ? "Edicion" : "Inicio" }} Proceso Contratacion</h2>
 <mat-dialog-content>
   <form [formGroup]="formProcedure" class="pt-2">
-    @if (!data) {
-    <select-search
-      [items]="documents()"
-      (onTyped)="searchDocuments($event)"
-      (onSelect)="onSelectDoc($event)"
-      [autoFilter]="false"
-      title="Numero de CITE"
-      placeholder="Selecciono un documento (Opcional)"
-      placeholderLabel="Referencia / Codigo"
-    />
-    }
     <div class="grid grid-cols-4 gap-x-4">
       <div>
         <mat-form-field>
@@ -41,7 +30,90 @@
           <input formControlName="descripcionAperturaProg" matInput />
         </mat-form-field>
       </div>
-      <div class="col-span-4 py-2">List objecto de gasto</div>
+
+      <div class="col-span-2">
+        <mat-form-field>
+          <mat-label>Metodo de adjudicacion</mat-label>
+          <mat-select formControlName="metodoAdjudicacion">
+            @for (type of metodosAdjudicacion; track $index) {
+            <mat-option [value]="type">{{ type }}</mat-option>
+            }
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-span-2">
+        <mat-form-field>
+          <mat-label>Forma de adjudicacion</mat-label>
+          <mat-select formControlName="formaAdjudicacion">
+            @for (type of formasAdjudicacion; track $index) {
+            <mat-option [value]="type">{{ type }}</mat-option>
+            }
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-span-4 px-2 mb-4">
+        <div class="flex items-center border-b-2 mb-3">
+          <p class="text-lg">Objeto de gasto</p>
+          <span class="flex-1"></span>
+          <button mat-icon-button (click)="addRequirement()">
+            <mat-icon>add</mat-icon>
+          </button>
+        </div>
+        <div formArrayName="items">
+          <div *ngFor="let control of requeriments.controls; let i = index">
+            <div [formGroupName]="i" class="flex items-center gap-x-2 overflow-y-hidden py-2">
+              <div class="flex-1 min-w-0">
+                <div class="flex gap-x-2">
+                  <div class="w-1/6">
+                    <mat-form-field>
+                      <mat-label>Codigo</mat-label>
+                      <input matInput formControlName="code" />
+                    </mat-form-field>
+                  </div>
+                  <div class="w-2/6">
+                    <mat-form-field>
+                      <mat-label>Nombre</mat-label>
+                      <input matInput formControlName="name" />
+                    </mat-form-field>
+                  </div>
+                  <div class="w-1/6">
+                    <mat-form-field>
+                      <mat-label>FF</mat-label>
+                      <input matInput formControlName="ff" />
+                    </mat-form-field>
+                  </div>
+                  <div class="w-1/6">
+                    <mat-form-field>
+                      <mat-label>OF</mat-label>
+                      <input matInput formControlName="of" />
+                    </mat-form-field>
+                  </div>
+                  <div class="w-1/6">
+                    <mat-form-field floatLabel="always">
+                      <mat-label>Monto</mat-label>
+                      <input
+                        formControlName="amount"
+                        matInput
+                        type="number"
+                        placeholder="0"
+                      />
+                      <span matTextPrefix>Bs.&nbsp;</span>
+                    </mat-form-field>
+                  </div>
+                </div>
+              </div>
+              <div class="w-14 h-12">
+                <button mat-icon-button (click)="removeRequirement(i)">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </div>
+            </div>
+          </div>
+          @if(requeriments.length===0){
+          <p class="text-lg">Sin elementos</p>
+          }
+        </div>
+      </div>
       <div>
         <mat-form-field>
           <mat-label>Bien / Servicio</mat-label>
@@ -53,29 +125,15 @@
         </mat-form-field>
       </div>
       <div>
-        <mat-form-field>
-          <mat-label>Metodo de adjudicacion</mat-label>
-          <mat-select formControlName="metodoAdjudicacion">
-            @for (type of metodosAdjudicacion; track $index) {
-            <mat-option [value]="type">{{ type }}</mat-option>
-            }
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field>
-          <mat-label>Forma de adjudicacion</mat-label>
-          <mat-select formControlName="formaAdjudicacion">
-            @for (type of formasAdjudicacion; track $index) {
-            <mat-option [value]="type">{{ type }}</mat-option>
-            }
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field>
+        <mat-form-field floatLabel="always">
           <mat-label>Precio referencial</mat-label>
-          <input formControlName="price" matInput />
+          <input
+            formControlName="price"
+            matInput
+            type="number"
+            placeholder="0"
+          />
+          <span matTextPrefix>Bs.&nbsp;</span>
         </mat-form-field>
       </div>
       <div>
@@ -96,18 +154,18 @@
           <input formControlName="warranty" matInput />
         </mat-form-field>
       </div>
+      <div>
+        <mat-form-field>
+          <mat-label>Cantidad: Hojas / Anexos</mat-label>
+          <input formControlName="numberOfDocuments" matInput />
+        </mat-form-field>
+      </div>
       <div class="col-span-4">
         <mat-form-field>
           <mat-label>Justificacion</mat-label>
           <textarea matInput formControlName="reason"></textarea>
         </mat-form-field>
       </div>
-    </div>
-    <div class="sm:w-80">
-      <mat-form-field>
-        <mat-label>Cantidad: Hojas / Anexos</mat-label>
-        <input formControlName="numberOfDocuments" matInput />
-      </mat-form-field>
     </div>
   </form>
 </mat-dialog-content>
