--- a/src/app/procedures/presentation/pages/internals-manage/internal-dialog/internal-dialog.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internal-dialog/internal-dialog.component.html
@@ -4,7 +4,7 @@
     @if (!data) { @if(!selectedDocProps()){
     <alert-message
       severity="info"
-      message="Esta hoja de ruta se creara sin cite"
+      title="Esta hoja de ruta se creara sin cite"
     />
     }
     <select-search
